# aoc2024

./: .gitignore  LICENSE  README.md  dune-project  pyproject.toml
app/day00/: parts.py
app/day01/: parts.js  parts.ml  parts.py
app/day02/: parts.js  parts.py
app/day03/: parts.js  parts.py
app/day04/: parts.js  parts.ml  parts.py
app/day05/: dune  parts.js  parts.py
app/day06/: parts.py
app/support/: dune  utils.js  utils.ml  utils.py
tests/day00/: solution_test.py
tests/day01/: solution_test.py
tests/day02/: solution_test.py
tests/day03/: solution_test.py
tests/day04/: solution_test.py
tests/day05/: solution_test.py
tests/day06/: solution_test.py
tests/support/: utils_test.py
