[project]
name = "aoc2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=24.10.0",
    "httpx>=0.28.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.1",
    "mypy>=1.13.0",
]

[tool.uv]
dev-dependencies = [
    "debugpy>=1.8.9",
]
